--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-ErrorDocument 400 http://tr37.byethost4.com/error/400.html
-ErrorDocument 401 http://tr37.byethost4.com/error/301.html
-ErrorDocument 403 http://tr37.byethost4.com/error/403.html
-ErrorDocument 404 http://tr37.byethost4.com/error/404.html
-ErrorDocument 503 http://tr37.byethost4.com/error/503.html
+ErrorDocument 400 http://tr37.byethost4.com/error.php?code=400
+ErrorDocument 401 http://tr37.byethost4.com/error.php?code=401
+ErrorDocument 403 http://tr37.byethost4.com/error.php?code=403
+ErrorDocument 404 http://tr37.byethost4.com/error.php?code=404
+ErrorDocument 503 http://tr37.byethost4.com/error.php?code=503
